# transitops

./: .gitignore  README.md
client/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  index.css
client/src/components/: DashboardLayout.jsx  Layout.jsx
client/src/context/: AuthContext.jsx
client/src/pages/: AnalyticsPage.jsx  CompliancePage.jsx  DashboardPage.jsx  DriversPage.jsx  ExpensesPage.jsx  LandingPage.jsx  LoginPage.jsx  MaintenancePage.jsx  NotFoundPage.jsx  RegisterPage.jsx  SettingsPage.jsx  TripsPage.jsx  VehiclesPage.jsx
client/src/utils/: format.js
server/: .gitignore  README.md  pyproject.toml  seed_db.py
server/app/: main.py  seed.py
server/app/core/: config.py  security.py
server/app/models/: __init__.py  driver.py  expense.py  maintenance.py  settings.py  trip.py  user.py  vehicle.py
server/app/repository/: base.py  driver.py  expense.py  maintenance.py  settings.py  trip.py  user.py  vehicle.py
server/app/routers/: analytics.py  auth.py  baserouter.py  drivers.py  expenses.py  maintenance.py  settings.py  trips.py  users.py  vehicles.py
server/app/schemas/: driver.py  expense.py  maintenance.py  settings.py  trip.py  user.py  vehicle.py
server/app/services/: analytics.py  auth.py  dispatch.py  fleet.py  maintenance.py
server/app/utils/: dependencies.py
server/tests/: conftest.py  test_analytics.py  test_auth.py  test_dispatch.py  test_fleet.py  test_infra.py  test_maintenance.py
